--- a/client/views/upload/upload.html
+++ b/client/views/upload/upload.html
@@ -1,4 +1,4 @@
-<template name="Home">
+<template name="Upload">
 	<section class="uk-container uk-container-center uk-margin-large-top">
 	  	<section class="uk-grid">
 	  		{{> sourceEntry pastec}}
