--- a/client/views/settings/settings.css
+++ b/client/views/settings/settings.css
@@ -1,10 +1,3 @@
 /*****************************************************************************/
-/* MasterLayout: Style */
+/* Settings: Style */
 /*****************************************************************************/
-#popOut {
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100px;
-	height: 100%;
-}
