--- a/client/app.scss
+++ b/client/app.scss
@@ -1,3 +1,4 @@
 /*****************************************************************************/
 /* Global CSS Styles */
 /*****************************************************************************/
+@import "packages/richsilv:uikit-sass/assets/scss/uikit";
