Image testing complete

--- a/client/views/catalogue/catalogue.scss
+++ b/client/views/catalogue/catalogue.scss
@@ -18,5 +18,5 @@
 	min-height: 200px;
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-origin: center center;
+	background-position: center center;
 }
