--- a/client/views/layouts/master_layout/master_layout.css
+++ b/client/views/layouts/master_layout/master_layout.css
@@ -1,6 +1,10 @@
 /*****************************************************************************/
 /* MasterLayout: Style */
 /*****************************************************************************/
+html, body {
+	height: 100%;
+}
+
 #popOut {
 	position: fixed;
 	left: 0;
