--- a/client/views/layouts/master_layout/master_layout.html
+++ b/client/views/layouts/master_layout/master_layout.html
@@ -9,6 +9,8 @@
 	    		<li class="uk-nav-divider"></li>
 	    	    <li class="{{ isActiveRoute 'settings' 'uk-active' }}"><a href="/settings"><i class="uk-icon-cog uk-icon-medium"> </i> Settings</a></li>
 	    		<li class="uk-nav-divider"></li>
+	    	    <li class="{{ isActiveRoute 'testimage' 'uk-active' }}"><a href="/testimage"><i class="uk-icon-eye uk-icon-medium"> </i> Test Image</a></li>
+	    		<li class="uk-nav-divider"></li>
 	    	</ul>
 	    </div>
 	</div>
