--- a/client/views/catalogue/catalogue.scss
+++ b/client/views/catalogue/catalogue.scss
@@ -1,6 +1,10 @@
 /*****************************************************************************/
 /* Catalogue: Style */
 /*****************************************************************************/
+body {
+	overflow-y: auto;
+}
+
 .uk-flex {
 	flex-wrap: wrap;
 	align-items: stretch;
