--- a/client/views/upload/upload.html
+++ b/client/views/upload/upload.html
@@ -14,19 +14,19 @@
 </template>
 
 <template name="sourceEntry">
-	<form class="uk-form uk-width-1-2">
-		<fieldset data-uk-margin>
-			<legend>Source URL for pictures</legend>
-		    <input  class="uk-width-1-1" type="input" placeholder="Type URL here" value="{{../url}}">
-	    </fieldset>
-	</form>
-	<div class="uk-width-1-2">
+	<div class="uk-width-large-1-2 uk-width-medium-1-2 uk-push-1-2">
 		<div class="uk-panel uk-panel-box {{#if connection}}uk-panel-box-primary{{else}}uk-panel-box-secondary{{/if}}">
 		    <div class="uk-panel-badge uk-badge {{#if connection}}uk-badge-success{{else}}uk-badge-danger{{/if}}">{{#if connection}}Connected{{else}}Disconnected{{/if}}</div>
 		    <h3 class="uk-panel-title"><i class="uk-icon-exchange"></i> Pastec Status</h3>
 		    <p>Connection to server at <strong>{{serverUrl}}</strong> is <strong>{{#if connection}}UP{{else}}DOWN{{/if}}</strong>.</p>
 		</div>
 	</div>
+	<form class="uk-form uk-width-large-1-2 uk-width-medium-1-2 uk-pull-1-2 uk-margin-top">
+		<fieldset data-uk-margin>
+			<legend>Source URL for pictures</legend>
+		    <input  class="uk-width-1-1" type="input" placeholder="Type URL here" value="{{../url}}">
+	    </fieldset>
+	</form>
 </template>
 
 <template name="results">
