--- a/client/views/settings/settings.html
+++ b/client/views/settings/settings.html
@@ -1,6 +1,6 @@
 <template name="Settings">
 	<section class="uk-container uk-container-center uk-margin-large-top">
-		<button class="uk-button uk-button-primary uk-display-block uk-container-center uk-width-1-4" type="button">Add a Pastec server</button>
+		<button class="uk-button uk-button-primary uk-display-block uk-container-center uk-width-large-1-4 uk-width-medium-1-2 uk-width-small-4-5" type="button">Add a Pastec server</button>
 		<div class="uk-width-medium-2-3 uk-width-large-2-3 uk-container-center uk-margin-top">
 			{{#each pastecServers}}
 				{{> pastec_details}}
