--- a/client/views/testimage/testimage.html
+++ b/client/views/testimage/testimage.html
@@ -1,21 +1,46 @@
 <template name="Testimage">
 	<section class="uk-height-1-1 uk-text-center">
-	    <div class="uk-height-1-1 uk-vertical-align uk-container-center">
-	        <div class="uk-vertical-align-middle">
-	            <div class="">
-	            	<form class="uk-form">
-					    <fieldset data-uk-margin>
-					        <legend>URL for the image you'd like to test</legend>
-					        <input type="url" placeholder="Image URL" class="uk-form-large uk-form-width-large">
-					        <button type="button" class="uk-button uk-button-large uk-button-primary">Go</button>
-				        </fieldset>
-			        </form>
-	            </div>
+		<ul class="uk-list-icons uk-width-1-1 uk-position-absolute uk-margin-small-top">
+		    <li><i class="uk-icon-link {{#if activeLink 'url'}}uk-active{{/if}} {{#if disabledLink 'url'}}uk-disabled{{/if}}" data-link-name="url" data-button-type="list-icon"></i></li>
+		    <li><i class="uk-icon-file-image-o {{#if activeLink 'file'}}uk-active{{/if}} {{#if disabledLink 'file'}}uk-disabled{{/if}}" data-link-name="file" data-button-type="list-icon"></i></li>
+		    <li><i class="uk-icon-camera {{#if activeLink 'camera'}}uk-active{{/if}} {{#if disabledLink 'camera'}}uk-disabled{{/if}}" data-link-name="camera" data-button-type="list-icon"></i></li>
+		</ul>
+	    <div class="uk-height-1-1 uk-vertical-align uk-container-center uk-width-large-1-1 uk-catwalk">
+	        <div class="uk-vertical-align-middle uk-width-large-2-3">
+	        	{{#if activeLink 'url'}}
+	        		{{> urlTest}}
+		        {{else}}{{#if activeLink 'file'}}
+		        	{{> fileTest}}
+		        {{else}}
+		        	{{> cameraTest}}
+		        {{/if}}{{/if}}
 	        </div>
 	    </div>
     </section>
 
     {{> test_result currentImage}}
+</template>
+
+<template name="urlTest">
+	<form class="uk-form">
+	    <fieldset data-uk-margin>
+	        <legend>URL for the image you'd like to test</legend>
+	        <input type="url" placeholder="Image URL" class="uk-form-large uk-width-3-4">
+	        <button type="button" class="uk-button uk-button-large uk-button-primary uk-width-1-5" data-button-type="test-link">Go</button>
+        </fieldset>
+    </form>
+</template>
+
+<template name="fileTest">
+	Test File
+</template>
+
+<template name="cameraTest">
+	<div class="">
+		<button data-button-type="camera" class="uk-button uk-button-primary uk-button-large uk-width-4-5 uk-width-medium-2-3 uk-width-large-1-2 uk-container-center uk-big-button">
+			<i class="uk-icon-camera uk-icon-large"></i> Take a Photo!
+		</button>
+	</div>
 </template>
 
 <template name="test_result">
