--- a/client/views/testimage/testimage.scss
+++ b/client/views/testimage/testimage.scss
@@ -7,3 +7,7 @@
 	background-color: desaturate(darken($button-primary-background, 10%),25%) !important;
 	color: lightgrey !important;
 }
+
+.wiki-thumb {
+	height: 6em;
+}
