--- a/client/views/upload/upload.scss
+++ b/client/views/upload/upload.scss
@@ -16,3 +16,8 @@
 .uk-vertical-align-middle {
 	display: table-cell;
 }
+
+.upload-flex {
+	align-items: center;
+	justify-content: space-around;
+}
