trying to replace crawler!

--- a/client/views/layouts/master_layout/master_layout.html
+++ b/client/views/layouts/master_layout/master_layout.html
@@ -3,13 +3,13 @@
 	    <div class="uk-offcanvas-bar">
 	    	<ul class="uk-nav uk-nav-offcanvas">
 	    		<li class="uk-nav-divider"></li>
-	    	    <li class="{{ isActiveRoute 'upload' 'uk-active' }}"><a href="/"><i class="uk-icon-picture-o uk-icon-medium" data-item-type="link"> </i> Add Images</a></li>
+	    	    <li class="{{ isActiveRoute regex='upload' className='uk-active' }}"><a href="/"><i class="uk-icon-picture-o uk-icon-medium" data-item-type="link"> </i> Add Images</a></li>
 	    		<li class="uk-nav-divider"></li>
-	    	    <li class="{{ isActiveRoute 'catalogue' 'uk-active' }}"><a href="/catalogue"><i class="uk-icon-book uk-icon-medium" data-item-type="link"> </i> Catalogue</a></li>
+	    	    <li class="{{ isActiveRoute regex='catalogue' className='uk-active' }}"><a href="/catalogue"><i class="uk-icon-book uk-icon-medium" data-item-type="link"> </i> Catalogue</a></li>
 	    		<li class="uk-nav-divider"></li>
-	    	    <li class="{{ isActiveRoute 'settings' 'uk-active' }}"><a href="/settings"><i class="uk-icon-cog uk-icon-medium" data-item-type="link"> </i> Settings</a></li>
+	    	    <li class="{{ isActiveRoute regex='settings' className='uk-active' }}"><a href="/settings"><i class="uk-icon-cog uk-icon-medium" data-item-type="link"> </i> Settings</a></li>
 	    		<li class="uk-nav-divider"></li>
-	    	    <li class="{{ isActiveRoute 'testimage' 'uk-active' }}"><a href="/testimage"><i class="uk-icon-eye uk-icon-medium" data-item-type="link"> </i> Test Image</a></li>
+	    	    <li class="{{ isActiveRoute regex='testimage' className='uk-active' }}"><a href="/testimage"><i class="uk-icon-eye uk-icon-medium" data-item-type="link"> </i> Test Image</a></li>
 	    		<li class="uk-nav-divider"></li>
 	    	</ul>
 	    </div>
