--- a/client/views/upload/upload.html
+++ b/client/views/upload/upload.html
@@ -29,44 +29,6 @@
 	</form>
 </template>
 
-<!-- <template name="results">
-	{{#if tags}}
-		<ul class="uk-list uk-list-line uk-list-striped">
-			{{#each tags}}
-				{{> imageItem}}
-			{{/each}}
-		</ul>	
-	{{/if}}
-</template>
-
-<template name="imageItem">
-	<li class="{{#unless width}}uk-hidden{{/unless}}">
-		<div class="uk-grid uk-grid-preserve" data-uk-grid-match>
-			<div class="uk-width-2-5">
-				<figure class="uk-thumbnail thumbnail">
-			        <img class="uk-container-center" src="{{url}}" alt="">
-			        <figcaption class="uk-thumbnail-caption uk-text-break">
-				        {{url}}
-				        <br>
-				        <span class="uk-text-small dimensions">{{width}} x {{height}}</span>
-			        </figcaption>
-		    	</figure>
-	    	</div>
-	    	<form class="uk-form uk-width-3-5 uk-vertical-align">
-	    	    <div class="uk-form-row uk-vertical-align-middle uk-width-1-1">
-	    	        <div class="uk-form-controls">
-	    	            <input type="text" placeholder="Title" class="uk-width-2-5 image-title">
-	    	            <input type="text" placeholder="Artist" class="uk-width-2-5 image-artist">
-	    	            <span class="uk-width-1-5">
-					    	<button class="uk-button uk-button-primary" type="button" disabled={{not pastec.connection}}>Add</button>
-				    	</span>
-	    	        </div>
-	    	    </div>
-	    	</form>
-    	</div>
-    </li>
-</template> -->
-
 <template name="results">
 	{{#if tags}}
 		<ul class="uk-list uk-list-line uk-list-striped">
@@ -82,6 +44,7 @@
 		<div class="uk-flex upload-flex">
 			<div class="uk-width-2-5">
 				<figure class="uk-thumbnail thumbnail">
+					<a href="" class="uk-close uk-position-absolute" data-action="remove"></a>
 			        <img class="uk-container-center" src="{{url}}" alt="">
 			        <figcaption class="uk-thumbnail-caption uk-text-break">
 				        {{url}}
